# appliances

./: .gitignore  Pipfile  README.md  digitalocean.pkr.hcl  pyproject.toml  requirements.yml  site.yaml
.github/: dependabot.yml
.github/workflows/: build-do.yml
roles/goauthentik.appliance/files/: docker-compose.override.yml
roles/goauthentik.appliance/files/scripts/: ak
roles/goauthentik.appliance/files/update-motd.d/: 99-one-click
roles/goauthentik.appliance/tasks/: app.yaml  main.yml  system-firewall.yaml  system.yaml
roles/goauthentik.appliance/templates/per-instance/: 001_onboot
