[tool.poetry]
name = "authentik-appliances"
version = "0.1.0"
description = ""
authors = ["Jens Langhammer <jens.langhammer@beryju.org>"]

[tool.poetry.dependencies]
python = "^3.10"
ansible = "^5.3.0"

[tool.poetry.dev-dependencies]
ansible-lint = "^5.4.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
