[tool.poetry]
name = "authentik-appliances"
version = "0.1.0"
description = ""
authors = ["Jens Langhammer <jens.langhammer@beryju.org>"]

[tool.poetry.dependencies]
python = "^3.10"
ansible = "^8.6.0"

[tool.poetry.dev-dependencies]
ansible-lint = "^6.8.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
